# AI-powered-Learning-platform

./: .dockerignore  .gitignore  ASSESSMENT_FEATURE.md  COURSE_PLANNING_IMPLEMENTATION.md  COURSE_PLANNING_QUICKSTART.md  FRONTEND_INTEGRATION.md  INTEGRATION_COMPLETE.md  PODCAST_FEATURE.md  PODCAST_IMPLEMENTATION.md  PODCAST_NAV_IMPROVEMENTS.md  QUICK_START.md  README.md  SUB_TOPIC_IMPLEMENTATION.md  USER_GUIDE_SUB_TOPICS.md  VIDEO_GENERATION_SETUP.md  docker-compose.yml  featherless.py  openrouter_test.py  pyproject.toml  reproduce_issue.py  requirements.txt
documentations/services/: ai_client.md  assessment_service.md  code_execution_service.md  code_problem_service.md  content_validator.md  course_planning_service.md  dynamic_script_service.md  mindmap_service.md  podcast_service.md  pre_assessment_service.md  sample_code_service.md  syllabus_service.md  video_generator.md
frontend/: .env.template  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  vite-env.d.ts
notebooks/: course-path.ipynb  course-planning.ipynb  image-gen.ipynb  learn-path-model.ipynb  mind_map.ipynb  new-video-gen.py  syllabus-generation.ipynb  video-gen-2.ipynb  video-gen-3.ipynb  video-gen.ipynb
server/: .env.template  Dockerfile  MIGRATION_SUMMARY.md  create_superuser.py  debug_syllabus.py  debug_syllabus_simple.py  test_assessment.py  test_assessment_api.py  test_content_validator.py  test_enrollment_flow.py  test_sub_topics.py  tmpclaude-0a46-cwd
server/api/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  (+1 more)
(+84 files in other folders)
