[project]
name = "ai-powered-learning-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.7",
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "ipykernel>=7.2.0",
    "moviepy>=1.0.3",
    "pillow>=12.1.1",
    "requests>=2.32.5",
]
